Finish Cinema Project xD

--- a/Errors/task.html
+++ b/Errors/task.html
@@ -1,10 +1,10 @@
-<h5 id="description">Description</h5>
+<h5 id="description" id="description">Description</h5>
 
 <p>Running a cinema theatre is no easy business. To help our friends, let's add statistics to your program. The stats will show the current income, total income, the number of available seats, and the percentage of occupancy. </p>
 
 <p>In addition, our friends asked you to take care of a small inconvenience: it's not good when a user can buy a ticket that has already been purchased by another user. Let's fix this!</p>
 
-<h5 id="objectives">Objectives</h5>
+<h5 id="objectives" id="objectives">Objectives</h5>
 
 <p>Now your menu should look like this:</p>
 
@@ -32,7 +32,7 @@
 val formatPercentage = "%.2f".format(percentage)
 print(formatPercentage) // 0.00</code></pre>
 
-<h5 id="examples">Examples</h5>
+<h5 id="examples" id="examples">Examples</h5>
 
 <p>The greater-than symbol followed by a space (<code class="language-kotlin">&gt; </code>) represents the user input. Note that it's not part of the input.</p>
 
